<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/background"
        android:transitionName="@string/tran_toolbar"
        app:title="Feed"
        app:titleTextColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/rlBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@android:color/white"
        android:transitionName="@string/tran_list_body">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

       <!-- <ListView
            android:id="@+id/listRepo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layoutAnimation="@anim/list_cell"
            android:visibility="gone" />-->
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/common_padding"
        android:transitionName="@string/tran_fab"
        app:fabSize="normal"
        app:backgroundTint="@color/btn_done"/>

</RelativeLayout>