<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:transitionName="@string/tran_view">

        <LinearLayout
            android:id="@+id/llBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/very_small_padding"
            android:orientation="horizontal">


            <View
                android:id="@+id/viewDummy"
                android:layout_width="@dimen/detail_dummy_view"
                android:layout_height="@dimen/detail_dummy_view"
                android:layout_margin="@dimen/small_padding"
                android:background="@drawable/circular_view_red"
                android:transitionName="@string/tran_dummy_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblRepoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/detail_title"
                    android:transitionName="@string/tran_title" />

                <TextView
                    android:id="@+id/lblRepoDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="af dfhv fijngefgfjngvii ejngjnbje ejngejie"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/detail_desc"
                    android:transitionName="@string/tran_decs" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/huge_padding"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_padding">

                    <com.arhatbaid.boxmedemo.customview.RoundedImageView
                        android:id="@+id/imgUser"
                        android:layout_width="@dimen/user_image"
                        android:layout_height="@dimen/user_image"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/common_padding" />

                    <TextView
                        android:id="@+id/lblUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:textSize="@dimen/detail_desc" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgStar"
                            android:layout_width="@dimen/detail_count_image"
                            android:layout_height="@dimen/detail_count_image"
                            android:layout_marginRight="@dimen/very_small_padding"
                            android:src="@drawable/star" />

                        <TextView
                            android:id="@+id/lblStarCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/detail_count" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgWatch"
                            android:layout_width="@dimen/detail_count_image"
                            android:layout_height="@dimen/detail_count_image"
                            android:layout_marginLeft="@dimen/very_small_padding"
                            android:layout_marginRight="@dimen/very_small_padding"
                            android:src="@drawable/watch" />

                        <TextView
                            android:id="@+id/lblWatchCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/detail_count" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgFork"
                            android:layout_width="@dimen/detail_count_image"
                            android:layout_height="@dimen/detail_count_image"
                            android:layout_marginLeft="@dimen/very_small_padding"
                            android:layout_marginRight="@dimen/very_small_padding"
                            android:src="@drawable/fork" />

                        <TextView
                            android:id="@+id/lblForkCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/detail_count" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnBrowser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"
            android:layout_below="@+id/llBody"
            android:layout_margin="@dimen/huge_padding"
            android:background="@drawable/rounded_button_git"
            android:text="@string/open_git"
            android:textColor="@android:color/white"
            android:textSize="@dimen/detail_desc" />
    </RelativeLayout>
</RelativeLayout>